DES-96 Fix bug where podcast play button jumps when switching to it's paused state, and fails to return to playing state once audio has been resumed.

--- a/ArticleTemplates/assets/scss/modules/media/_audio-player.scss
+++ b/ArticleTemplates/assets/scss/modules/media/_audio-player.scss
@@ -65,6 +65,21 @@ Play a piece of audio, i.e. a podcast.
             background-color: color(tone-media-accent);
         }
     }
+
+    .touchpoint__button.pause {
+        display: none;
+        margin-top: 2px;
+    }
+
+    &.pause {
+        .touchpoint__button.pause {
+            display: block;
+        }
+
+        .touchpoint__button.play {
+            display: none;
+        }
+    }
 }
 
 .audio-player__button--loading {
