--- a/ArticleTemplates/assets/scss/style-sync.css
+++ b/ArticleTemplates/assets/scss/style-sync.css
@@ -2363,6 +2363,13 @@ Play a piece of audio, i.e. a podcast.
     background-color: #fb0; }
     .audio-player__button.touchpoint--primary .touchpoint__button:active {
       background-color: #ffd35c; }
+  .audio-player__button .touchpoint__button.pause {
+    display: none;
+    margin-top: 2px; }
+  .audio-player__button.pause .touchpoint__button.pause {
+    display: block; }
+  .audio-player__button.pause .touchpoint__button.play {
+    display: none; }
 
 .audio-player__button--loading {
   position: absolute;
