--- a/test/unit/test.css
+++ b/test/unit/test.css
@@ -3852,6 +3852,13 @@
       background-color: #fb0; }
       #sandbox .audio-player__button.touchpoint--primary .touchpoint__button:active {
         background-color: #ffd35c; }
+    #sandbox .audio-player__button .touchpoint__button.pause {
+      display: none;
+      margin-top: 2px; }
+    #sandbox .audio-player__button.pause .touchpoint__button.pause {
+      display: block; }
+    #sandbox .audio-player__button.pause .touchpoint__button.play {
+      display: none; }
   #sandbox .audio-player__button--loading {
     position: absolute;
     top: 12px;
